--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
