--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@react-pdf/renderer": "^3.1.9",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
-    "file-saver": "^2.0.5",
-    "html2canvas": "^1.4.1",
+    "chart.js": "^4.3.0",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.6.2",
     "tailwindcss": "3.3.2"
   }
 }
